--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,20 @@ x-standard-healthcheck: &standard-healthcheck
     retries: 5
 
 services:
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant
+    restart: unless-stopped
+    ports:
+      - "6333:6333" # HTTP API
+      - "6334:6334" # gRPC (optional)
+    volumes:
+      - qdrant_storage:/qdrant/storage
+    environment:
+      QDRANT__SERVICE__GRPC_PORT: 6334
+
+volumes:
+  qdrant_storage:
   main-agent:
     container_name: main-agent-api
     build: ./apis/main-agent
