--- a/compose.yaml
+++ b/compose.yaml
@@ -10,17 +10,6 @@ x-standard-healthcheck: &standard-healthcheck
     retries: 5
 
 services:
-  qdrant:
-    image: qdrant/qdrant:latest
-    container_name: qdrant
-    restart: unless-stopped
-    ports:
-      - "6333:6333" # HTTP API
-      - "6334:6334" # gRPC (optional)
-    volumes:
-      - qdrant_storage:/qdrant/storage
-    environment:
-      QDRANT__SERVICE__GRPC_PORT: 6334
   main-agent:
     container_name: main-agent-api
     build: ./apis/main-agent
@@ -31,26 +20,19 @@ services:
     <<: *standard-healthcheck
     networks:
       - chatbot-network
-  sub-agent:
-    container_name: sub-agent-api
-    build: ./apis/sub-agent
-    ports:
-      - "8002:8000"
+  gmail-poller:
+    container_name: gmail-poller-interface
+    build: ./interfaces/gmail-poller
     environment:
+      - MAIN_AGENT_API_EMAIL_URL=${MAIN_AGENT_API_EMAIL_URL}
+      - POLL_INTERVAL=${POLL_INTERVAL}
       - PYTHONUNBUFFERED=1
-    <<: *standard-healthcheck
+    depends_on:
+      main-agent:
+        condition: service_healthy
     networks:
       - chatbot-network
-  another-interface:
-    container_name: another-interface
-    build: ./interfaces/another-interface
-  some-interface:
-    container_name: some-interface
-    build: ./interfaces/some-interface
 
 networks:
   chatbot-network:
     driver: bridge
-
-volumes:
-  qdrant_storage:
